# Founder-sVoice

./: .gitignore  README.md  package-lock.json
agent/: .env  .env.example  pyproject.toml
agent/data/: maneuver_kb.md
agent/src/: __init__.py  agent.py  config.py  founder_agent.py  knowledge_base.py  lead_manager.py  prompts.py  token_server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentOrb.jsx  ConnectionScreen.jsx  LeadPanel.jsx  SessionView.jsx  TranscriptPanel.jsx  VisualLayer.jsx
frontend/src/components/layout/: AppShell.jsx  GlassPanel.jsx
frontend/src/components/lead/: LeadCapturePanel.jsx
frontend/src/components/session/: AgentOrb.jsx  ConnectionScreen.jsx  SessionView.jsx
frontend/src/components/transcript/: TranscriptPanel.jsx
frontend/src/components/visual/: CaseStudyCard.jsx  ProcessDiagram.jsx  ServiceDetail.jsx  ServicesSlide.jsx  VisualLayer.jsx  WelcomeVisual.jsx
frontend/src/components/visuals/: CaseStudyVisual.jsx  ProcessVisual.jsx  ServiceDetailVisual.jsx  ServicesVisual.jsx  WelcomeVisual.jsx
frontend/src/hooks/: useAgentConnection.js  useAgentState.js  useBrowserTTS.js  useRpcHandler.js
frontend/src/services/: tokenService.js
frontend/src/utils/: constants.js
